@@ -1,0 +1,7 @@
+SELECT 1;
+--error 1000
+SELECT errmsg empty;
+--error 1000
+SELECT invalid type;
+--error 1000
+SELECT errmsg;
