@@ -4,6 +4,7 @@
   * added --no-daemon and --pid-file
   * added --no-proxy to disable the proxy 
   * added testcases 
+  * added support for proxy.response.packets
 
   * fixed decoding of len-encoded ints for 3-byte notation
   * fixed check for glib2 to require at least 2.6.0
